--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,8 @@ dependencies:
   widget_zoom: ^0.0.3
   xml: ^6.5.0
   html: ^0.15.4
+  vector_math: ^2.1.4
+  audioplayers: ^5.2.1
 
 flutter_launcher_icons:
   android: "launcher_icon"
@@ -112,6 +114,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
   - assets/images/
+  - assets/audio/traffic_alerts/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
