--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ dependencies:
   html: ^0.15.4
   vector_math: ^2.1.4
   audioplayers: ^5.2.1
+  dart_numerics: ^0.0.6
 
 flutter_launcher_icons:
   android: "launcher_icon"
