Many improvements to algo's and code style/logging

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,7 @@ dependencies:
   vector_math: ^2.1.4
   audioplayers: ^5.2.1
   dart_numerics: ^0.0.6
+  logging: ^1.2.0
 
 flutter_launcher_icons:
   android: "launcher_icon"
