--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -51,7 +51,7 @@ jobs:
           channel: 'stable'
           flutter-version: '3.19.0'
       - name: Install dependencies
-        run: sudo apt-get install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev
+        run: sudo apt-get install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev libgstreamer1.0-dev libgstreamer-plugins-base1.0-dev
       - name: Install project dependencies
         run: flutter pub get
       - name: Generate intermediates
