--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -50,8 +50,9 @@ jobs:
         with:
           channel: 'stable'
           flutter-version: '3.19.0'
-      - name: Install dependencies
+      - name: Update source repo
         run: sudo apt-get update
+      - name: Install dependencies
         run: sudo apt-get install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev libgstreamer1.0-dev libgstreamer-plugins-base1.0-dev
       - name: Install project dependencies
         run: flutter pub get
