--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Update source repo
         run: sudo apt-get update
       - name: Install audioplayers dependencies
-        run: sudo apt-get install -y libunwind-devel.x86_64 libgstreamer1.0-dev libgstreamer-plugins-base1.0-dev
+        run: sudo apt-get install -y libgstreamer1.0-dev libgstreamer-plugins-base1.0-dev
       - name: Install dependencies
         run: sudo apt-get install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev
       - name: Install project dependencies
