--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Update source repo
         run: sudo apt-get update
       - name: Pre-empt libunwind issue for gstreamer
-        run: sudo apt-get install -y libc++abi-dev libc++-dev
+        run: sudo apt-get install -y libunwind-dev
       - name: Install audioplayers dependencies
         run: sudo apt-get install -y libgstreamer1.0-dev libgstreamer-plugins-base1.0-dev
       - name: Install dependencies
