--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,6 +20,12 @@
             "request": "launch",
             "type": "dart",
             "flutterMode": "release"
-        }     
+        },
+        {
+            "name": "Icon draw test",
+            "request": "launch",
+            "type": "dart",
+            "program": "lib/gdl90/traffic_cache.dart"
+        }          
     ]
 }
